Styles should not show background-repeat-x/y, or -webkit-mask-repeat-x/y https://bugs.webkit.org/show_bug.cgi?id=167255

Patch by Devin Rousso <dcrousso+webkit@gmail.com> on 2017-01-27
Reviewed by Joseph Pecoraro.

Source/WebCore:

Test: inspector/css/css-property.html

* css/makeprop.pl:
(addProperty):
Add a generated function `isInternalCSSProperty` that checks the given CSSPropertyID against
a derived list of properties from CSSProperties.json with "internal-only".

* inspector/InspectorCSSAgent.cpp:
(WebCore::InspectorCSSAgent::getSupportedCSSProperties):
* inspector/InspectorStyleSheet.cpp:
(WebCore::InspectorStyle::styleWithProperties):
Only pass CSS property payloads to the frontend if they are not internal.

LayoutTests:

Checks that internal-only CSS properties are marked as invalid when passed to WebInspector.

* inspector/css/css-property-expected.txt: Added.
* inspector/css/css-property.html: Added.

Canonical link: https://commits.webkit.org/184542@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211289 268f45cc-cd09-0410-ab3c-d52691b4dbfc